--- a/gitops.yaml
+++ b/gitops.yaml
@@ -11,6 +11,6 @@ spec:
       url: https://github.com/herveleclerc/kluctl-demo.git
 #      path: .
   target: k8s-ims
-  context: k8s-ims
+#  context: k8s-ims
   prune: true
   delete: true
